syntax = "proto3";

package uklon.integrationcontracts.proto.partner.notification;

option csharp_namespace = "Uklon.IntegrationContracts.Proto.Partner";

message NotificationEvent {
  string event_id = 1;
  int64 occurred_at = 2;
  Notification notification = 3;
}

message Notification {
  string id = 1;

  string receiver_account_id = 2;
  string fleet_id = 3;

  NotificationType type = 4;
  NotificationImportance importance = 5;

  string message = 6;
  bool is_bulk = 7;
}

enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_DRIVER_BLOCKED = 1;
  NOTIFICATION_TYPE_DRIVER_UNBLOCKED = 2;
  NOTIFICATION_TYPE_VEHICLE_BLOCKED = 3;
  NOTIFICATION_TYPE_VEHICLE_UNBLOCKED = 4;
  NOTIFICATION_TYPE_FLEET_CONTACT_BLOCKED = 5;
  NOTIFICATION_TYPE_FLEET_CONTACT_UNBLOCKED = 6;

  NOTIFICATION_TYPE_VEHICLE_ADDED_TO_FLEET = 7;
  NOTIFICATION_TYPE_VEHICLE_REMOVED_FROM_FLEET = 8;
  NOTIFICATION_TYPE_DRIVER_ADDED_TO_FLEET = 9;
  NOTIFICATION_TYPE_DRIVER_REMOVED_FROM_FLEET = 10;
  NOTIFICATION_TYPE_FLEET_CONTACT_ADDED = 11;
  NOTIFICATION_TYPE_FLEET_CONTACT_REMOVED = 12;

  NOTIFICATION_TYPE_DRIVER_BAD_FEEDBACK_RECEIVED = 13;
  NOTIFICATION_TYPE_DRIVER_BAD_FEEDBACK_CONFIRMED = 14;
  NOTIFICATION_TYPE_DRIVER_BAD_FEEDBACK_NOT_CONFIRMED = 15;

  NOTIFICATION_TYPE_VEHICLE_TO_FLEET_ADDITION_TICKET_APPROVED = 16;
  NOTIFICATION_TYPE_VEHICLE_TO_FLEET_ADDITION_TICKET_REJECTED = 17;
  NOTIFICATION_TYPE_VEHICLE_TO_FLEET_ADDITION_TICKET_CLARIFICATION = 18;

  NOTIFICATION_TYPE_FLEET_DRIVER_REGISTRATION_TICKET_SENT = 19;
  NOTIFICATION_TYPE_FLEET_DRIVER_REGISTRATION_TICKET_APPROVED = 20;
  NOTIFICATION_TYPE_FLEET_DRIVER_REGISTRATION_TICKET_REJECTED = 21;
  NOTIFICATION_TYPE_FLEET_DRIVER_REGISTRATION_TICKET_CLARIFICATION = 22;

  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_CREATED = 23;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_CREATED_BLOCK_IMMEDIATELY = 24;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_APPROVED = 25;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_REJECTED = 26;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_CLARIFICATION = 27;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_DEADLINE_CAME = 28;

  NOTIFICATION_TYPE_B2B_SPLIT_ADJUSTMENT_CHANGED = 29;
  NOTIFICATION_TYPE_B2B_SPLIT_ADJUSTMENT_CANCELED = 30;
  NOTIFICATION_TYPE_B2B_SPLIT_DISTRIBUTION_CHANGED = 31;
  NOTIFICATION_TYPE_FLEET_CABINET_UPDATE = 32;
  NOTIFICATION_TYPE_IMPORTANT_INFORMATION = 33;
  NOTIFICATION_TYPE_ACCEPTANCE_REQUIRED = 34;

  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_CREATED = 35;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_CREATED_BLOCK_IMMEDIATELY = 36;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_APPROVED = 37;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_REJECTED = 38;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_CLARIFICATION = 39;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_DEADLINE_CAME = 40;

  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_CREATED = 41;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_CREATED_BULK = 42;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_REJECTED = 43;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_CLARIFICATION = 44;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_DEADLINE_REMINDER = 45;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_DEADLINE_REMINDER_BULK = 46;

  NOTIFICATION_TYPE_VEHICLE_TO_FLEET_ADDITION_TICKET_MANUAL_REMINDER = 47;
  NOTIFICATION_TYPE_DRIVER_PHOTO_CONTROL_TICKET_MANUAL_REMINDER = 48;
  NOTIFICATION_TYPE_VEHICLE_PHOTO_CONTROL_TICKET_MANUAL_REMINDER = 49;
  NOTIFICATION_TYPE_VEHICLE_BRANDING_PERIOD_TICKET_MANUAL_REMINDER = 50;

 NOTIFICATION_TYPE_FLEET_DRIVER_CASH_LIMIT_EXCEEDED = 51;
}

enum NotificationImportance {
  NOTIFICATION_IMPORTANCE_UNSPECIFIED = 0;
  NOTIFICATION_IMPORTANCE_NORMAL = 1;
  NOTIFICATION_IMPORTANCE_HIGH = 2;
  NOTIFICATION_IMPORTANCE_CRITICAL = 3;
}
